--- a/package.json
+++ b/package.json
@@ -4,16 +4,23 @@
   "dependencies": {
     "@rails/actioncable": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "4.3.0",
+    "@rails/webpacker": "^6.0.0-beta.7",
     "bootstrap": "4.6",
     "jquery": "1.9.1 - 3",
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0",
-    "webpack": "^4.0.0 || ^5.0.0"
+    "webpack": "^5.11.0"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-cli": "^4.7.2",
+    "@webpack-cli/serve": "^1.5.1",
+    "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.2"
-  }
+  },
+  "babel": {
+    "presets": ["./node_modules/@rails/webpacker/package/babel/preset.js"]
+  },
+  "browserslist": [
+    "defaults"
+  ]
 }
