--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "dependencies": {
     "@rails/actioncable": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "^6.0.0-beta.7",
+    "@rails/webpacker": "4.3.0",
     "bootstrap": "4.6",
     "jquery": "1.9.1 - 3",
     "popper.js": "^1.16.1",
@@ -17,7 +17,12 @@
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.2"
   },
-    "babel": {
-    "presets": ["./node_modules/@rails/webpacker/package/babel/preset.js"]
-  }
+  "babel": {
+    "presets": [
+      "./node_modules/@rails/webpacker/package/babel/preset.js"
+    ]
+  },
+  "browserslist": [
+    "defaults"
+  ]
 }
